--- a/tweet.css
+++ b/tweet.css
@@ -1,6 +1,7 @@
-.static-tweet {
+/* card */
+.tweet-card {
     background: white;
-    margin: 0;
+    margin: 15px 0;
     padding: 20px;
     background-color: #fff;
     border: 1px solid #e1e8ed;
@@ -10,82 +11,121 @@
     font-family: Helvetica, Roboto, "Segoe UI", Calibri, sans-serif;
     color: #1c2022;
     max-width: 500px;
+    text-align: left;
 }
 
-.static-tweet:hover {
+.tweet-card:hover {
     border-color: #ccd6dd;
 }
 
-.static-tweet a {
+.tweet-card a {
     color: #2b7bb9;
+    text-decoration: none;
 }
 
-.static-tweet a:hover {
+.tweet-card a:hover {
     color: #3b94d9;
 }
 
+
+
+/* header */
 .tweet-header {
     display: flex;
 }
 
-.tweet-profile {
+.tweet-header .tweet-profile {
     margin-right: 9px;
     flex-shrink: 0;
 }
 
-.tweet-profile img {
+.tweet-header .tweet-profile img {
     border-radius: 50%;
     height: 36px;
     width: 36px;
 }
 
-.tweet-author {
+.tweet-header .tweet-author {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
 }
 
-a.tweet-author-name {
+.tweet-header .tweet-author-name {
     font-weight: 700;
     color: #1c2022;
     line-height: 1.3;
 }
 
-a.tweet-author-name:hover {
+.tweet-header .tweet-author-name:hover {
     color: #3b94d9;
 }
 
-a.tweet-author-handle {
+.tweet-header .tweet-author-handle {
     color: #697882;
     font-size: 14px;
     line-height: 1;
 }
 
-.static-tweet a,
-.static-tweet a:hover {
-    text-decoration: none;
+.tweet-header .tweet-bird {
+    margin-left: 20px;
 }
 
+
+/* images */
+.tweet-images img {
+    width: 100%;
+    max-height: 250px;
+    object-fit: cover;
+    margin-bottom: 10px;
+    border-radius: 4px;
+}
+
+
+/* footer */
 .tweet-footer {
     display: flex;
-    align-content: center;
+    align-items: center;
 }
 
-a.tweet-date {
+.tweet-card .tweet-footer a {
     color: #697882;
     font-size: 14px;
 }
 
-a.tweet-date:hover {
+.tweet-footer .tweet-date:hover {
     color: #2b7bb9;
 }
 
-.tweet-bird {
-    margin-left: 20px;
+.tweet-footer .tweet-like {
+    margin-right: 15px;
+    font-size: 15px;
+    display: flex;
+    align-items: center;
 }
 
+.tweet-footer .tweet-like:hover {
+    color: #e0245e;
+}
+
+.tweet-footer .tweet-like-count {
+    margin-left: 4px;
+}
+
+.tweet-footer .tweet-like-icon {
+    filter: grayscale(1)brightness(1.4);
+    transition: filter;
+}
+
+.tweet-footer .tweet-like:hover .tweet-like-icon {
+    filter: none;
+}
+
+
+
+/* icons */
 .tweet-bird-icon,
-.tweet-heart-icon {
+.tweet-like-icon {
     display: inline-block;
     width: 1.25em;
     height: 1.25em;
@@ -98,38 +138,6 @@ a.tweet-date:hover {
     background-image: url(data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2072%2072%22%3E%3Cpath%20fill%3D%22none%22%20d%3D%22M0%200h72v72H0z%22%2F%3E%3Cpath%20class%3D%22icon%22%20fill%3D%22%231da1f2%22%20d%3D%22M68.812%2015.14c-2.348%201.04-4.87%201.744-7.52%202.06%202.704-1.62%204.78-4.186%205.757-7.243-2.53%201.5-5.33%202.592-8.314%203.176C56.35%2010.59%2052.948%209%2049.182%209c-7.23%200-13.092%205.86-13.092%2013.093%200%201.026.118%202.02.338%202.98C25.543%2024.527%2015.9%2019.318%209.44%2011.396c-1.125%201.936-1.77%204.184-1.77%206.58%200%204.543%202.312%208.552%205.824%2010.9-2.146-.07-4.165-.658-5.93-1.64-.002.056-.002.11-.002.163%200%206.345%204.513%2011.638%2010.504%2012.84-1.1.298-2.256.457-3.45.457-.845%200-1.666-.078-2.464-.23%201.667%205.2%206.5%208.985%2012.23%209.09-4.482%203.51-10.13%205.605-16.26%205.605-1.055%200-2.096-.06-3.122-.184%205.794%203.717%2012.676%205.882%2020.067%205.882%2024.083%200%2037.25-19.95%2037.25-37.25%200-.565-.013-1.133-.038-1.693%202.558-1.847%204.778-4.15%206.532-6.774z%22%2F%3E%3C%2Fsvg%3E);
 }
 
-.tweet-heart-icon {
+.tweet-like-icon {
     background-image: url(data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224%22%20height%3D%2224%22%20viewBox%3D%220%200%2024%2024%22%3E%3Cpath%20class%3D%22icon%22%20fill%3D%22%23E0245E%22%20d%3D%22M12%2021.638h-.014C9.403%2021.59%201.95%2014.856%201.95%208.478c0-3.064%202.525-5.754%205.403-5.754%202.29%200%203.83%201.58%204.646%202.73.813-1.148%202.353-2.73%204.644-2.73%202.88%200%205.404%202.69%205.404%205.755%200%206.375-7.454%2013.11-10.037%2013.156H12zM7.354%204.225c-2.08%200-3.903%201.988-3.903%204.255%200%205.74%207.035%2011.596%208.55%2011.658%201.52-.062%208.55-5.917%208.55-11.658%200-2.267-1.822-4.255-3.902-4.255-2.528%200-3.94%202.936-3.952%202.965-.23.562-1.156.562-1.387%200-.015-.03-1.426-2.965-3.955-2.965z%22%2F%3E%3C%2Fsvg%3E);
-}
-
-.tweet-heart {
-    margin-right: 15px;
-    font-size: 15px;
-    display: flex;
-    align-items: center;
-}
-
-.tweet-favorite-count {
-    margin-left: 4px;
-}
-
-.tweet-heart-icon {
-    filter: grayscale(1)brightness(1.4);
-    transition: filter;
-}
-
-.tweet-heart:hover .tweet-heart-icon {
-    filter: none;
-}
-
-.tweet-images img {
-    max-width: 100%;
-    border-radius: 4px;
-}
-
-
-/* cleanup extra footer from md */
-
-.tweet-footer+p {
-    display: none;
 }
